#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl_hdf2psana
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-02
2013-03-15 Andy Salnikov
- forgot to add epics-h5.ddl

Tag: V00-00-01
2013-03-15 Andy Salnikov
- added epics, not very efficient implementation
- first production tag for nightlies

Tag: andy-20130313-01
2013-03-13 Andy Salnikov
- added acqiris and pnccd

Tag: andy-20130312-01
2013-03-12 Andy Salnikov
- progress on vlen arrays, adding evr abd bld to the bunch

Tag: andy-20130226-02
2013-02-26 Andy Salnikov
- work in progress

Tag: andy-20130226-01
2013-02-26 Andy Salnikov
- work in progress