@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-00
+2013-03-19 Andy Salnikov
+- updates to epics stuff, try to avoid reading data if possible
+
 Tag: V00-00-02
 2013-03-15 Andy Salnikov
 - forgot to add epics-h5.ddl
